# tox-pip-sync

./: .cookiecutter.json  .coveragerc  .isort.cfg  .pylintrc  Makefile  README.md  pyproject.toml  pytest.ini  setup.cfg  tox.ini
src/tox_pip_sync/: __init__.py  _config.py  _env_hashing.py  _pip_sync.py  _requirements.py
tests/unit/: __init___test.py  _config_test.py  _pip_sync_test.py  _requirements_test.py  conftest.py
tests/unit/tox_pip_sync/: __init___test.py  _config_test.py  _pip_sync_test.py
